; ModuleID = '/home/carl/AnghaBench/linux/arch/arm64/mm/extr_flush.c_sync_icache_aliases.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm64/mm/extr_flush.c_sync_icache_aliases.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sync_icache_aliases(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = ptrtoint i8* %6 to i64
  store i64 %7, i64* %5, align 8
  %8 = call i64 (...) @icache_is_aliasing()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load i8*, i8** %3, align 8
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @__clean_dcache_area_pou(i8* %11, i64 %12)
  %14 = call i32 (...) @__flush_icache_all()
  br label %21

15:                                               ; preds = %2
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* %4, align 8
  %19 = add i64 %17, %18
  %20 = call i32 @__flush_icache_range(i64 %16, i64 %19)
  br label %21

21:                                               ; preds = %15, %10
  ret void
}

declare dso_local i64 @icache_is_aliasing(...) #1

declare dso_local i32 @__clean_dcache_area_pou(i8*, i64) #1

declare dso_local i32 @__flush_icache_all(...) #1

declare dso_local i32 @__flush_icache_range(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
